# morphological-operations-opencv

./: .gitignore  CMakeLists.txt  Makefile  README.md  morphological-operations-opencv.pro
header_files/: header.hpp
source_files/: image.cpp  main-image-gui.cpp  main.cpp  morphological-operation.cpp
